Fixed the logos not appearing

--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="images/mydil-logo.jpg" alt="MY DIL Logo" height="60">
+                <img src="Images/mydil-logo.jpg" alt="MY DIL Logo" height="60">
             </a>
             <div class="navbar-icons ml-auto">
                 <a href="#" class="navbar-icon">
-                    <img src="images/user-icon.svg" alt="User" height="24">
+                    <img src="Images/user-icon.svg" alt="User" height="24">
                 </a>
                 <a href="#" class="navbar-icon cart-icon" id="cartNavIcon">
                     <i class="fas fa-shopping-cart fa-2x"></i>
                     <span class="badge badge-pill badge-danger" id="cart-item-count">0</span>
                 </a>
                 <a href="#" class="navbar-icon">
-                    <img src="images/logout-icon.png" alt="Logout" height="24">
+                    <img src="Images/logout-icon.png" alt="Logout" height="24">
                 </a>
             </div>
         </div>
